styles.css
:root {
  --bg: #f9f9f9;
  --primary-text: #1a1a1a;
  --secondary-text: #666666;
  --accent-Or-Links: #005f99;
  --border-Or-Divider: #e0e0e0;
}

*,
::before,
::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

*:not(a) {
  cursor: default;
}

body {
  font-family: "Inter";
  background-color: var(--bg);
  color: var(--primaryText);
  background-color: #1a1a1a;
}

#main > section:not(:last-of-type) {
  border-bottom: 1px solid var(--border-Or-Divider);
}

#main > section {
  padding: 2rem 0;
}

section > h2 {
  margin: 2vh 0;
}

section > ul > li {
  list-style-type: none;
  margin: 0.5vh 3vw;
}

#main {
  background-color: white;
  min-width: 300px;
  max-width: 1200px;
  margin: auto;
  padding: 5%;
}

#img {
  display: block;
  margin: 2rem auto;
  width: 96%;
  box-shadow: 0 0 20px rgb(71, 71, 71);
}

a {
  color: var(--accent-Or-Links);
  text-decoration: none;
}

#summary {
  text-align: justify;
}

#summary,
#personal-info {
  line-height: 1.5rem;
}

#languages img {
  width: 2rem;
  vertical-align: middle;
  margin-right: 20px;
  box-shadow: 0px 0px 5px rgb(201, 201, 201);
}

.full-img {
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  background-color: #1a1a1ac4;
}

.full-img img {
  display: block;
  margin: auto;
  max-height: 80%;
  max-width: 80%;
  position: relative;
  top: 10%;
}

@media (min-width: 426px) {
  section > ul > li {
    list-style-type: none;
    margin: 0.5vh 1rem;
  }
  #personal-info {
    position: relative;
  }
  #img {
    width: 38%;
    max-width: 260px;
    position: absolute;
    right: 0;
    top: -4rem;
  }
}

